--- a/views/index.html
+++ b/views/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Website-Projekt</title>
-    <meta name="AUTHOR" content="Euer Name">
-    <meta name="COPYRIGHT" content="Copyright (c) 2025 by Vorname Nachname">
+    <meta name="AUTHOR" content="Jacek Tulacz">
+    <meta name="COPYRIGHT" content="Copyright (c) 2025 by Jacek Tulacz">
     <meta name="ROBOTS" content="INDEX, FOLLOW">
-    <meta name="DESCRIPTION" content="Dies ist die Bewerbungshomepage von Vorname Nachname">
-    <meta name ="KEYWORDS" content ="Bewerbungshomepage, Vorname Nachname, Bewerbung">
+    <meta name="DESCRIPTION" content="Dies ist die Bewerbungshomepage von Jacek Tulacz">
+    <meta name ="KEYWORDS" content ="Bewerbungshomepage, Jacek Tulacz, Bewerbung">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -17,6 +17,6 @@
   </head>
 
   <body>
-    <p>Hello World</p>
+    <p>Bewerbungshomepage Jacek Tulacz</p>
   </body>
 </html>
