--- a/views/index.html
+++ b/views/index.html
@@ -17,6 +17,22 @@
   </head>
 
   <body>
-    <p>Bewerbungshomepage Jacek Tulacz</p>
+    <div id="kopfbereich"></div>
+    <!-- Ende kopfbereich -->
+
+    <div id="navibereich"></div>
+    <!-- Ende navibereich -->
+    
+    <div id="textbereich">
+       <div class="content-block">
+            HIER KOMMEN SPÄTER DIE INHALTE HIN
+       </div><!-- Ende content-block -->
+    </div><!-- Ende textbereich -->
+
+      <div id="fussbereich"></div>
+    <!-- Ende fussbereich -->
+
+    <div id="newsbereich"></div>
+    <!-- Ende newsbereich -->
   </body>
 </html>
