--- a/public/style.css
+++ b/public/style.css
@@ -14,7 +14,7 @@ html, body {
   top:0;                     ! Position oben;
   left:0;                    ! Position ganz links;
   border: 1px solid #ccc;    ! Rahmenart und -farbe;
-  background-color:#172152;    ! Hintergrundfarbe;
+  background-color:#182C52;    ! Hintergrundfarbe;
   width:100%;                ! Breite des Kopfbereichs;
   height:100px;              ! Höhe des Kopfbereichs;
   z-index:2;                 ! Kopfbereich überlagert andere Bereiche;                
@@ -25,7 +25,7 @@ html, body {
   top: 100px;                ! Position unterhalb des Kopfbereiches;
   left:0;                    ! Position ganz links;
   border: 1px solid #ccc;    ! Rahmenart und -farbe;
-  background-color:red;      ! Hintergrundfarbe;
+  background-color: #82AED1;      ! Hintergrundfarbe;
   width:200px;               ! Breite des Navibereichs;
   min-height:300px;          ! Minimal-Höhe des Navibereichs;
   z-index:2;                 ! Navibereich überlagert andere Bereiche;
@@ -52,7 +52,7 @@ html, body {
   right:0px;                 ! Rechtsausrichtung;
   top: 100px;                ! Position unterhalb des Kopfbereiches;
   border: 1px solid #ccc;    ! Rahmenart und -farbe;
-  background-color:yellow;   ! Hintergrundfarbe;
+  background-color: #82AED1;   ! Hintergrundfarbe;
   width:200px;               ! Breite des Newsbereichs;
   min-height:300px;          ! Minimal-Höhe des Newsbereichs;
   z-index:2;                 ! Newsbereich überlagert andere Bereiche;
@@ -65,7 +65,7 @@ html, body {
  left:0;                      ! Position ganz links;
  border: 1px solid #ccc;      ! Rahmenart und -farbe;
  width: 100%;                 ! Breite des Fussbereichs;
- background-color: blue;      ! Hintergrundfarbe;
+ background-color: #182C52;   ! Hintergrundfarbe;
  height:50px;                 ! Höhe des Fußbereichs;
  z-index:2;                   ! Fußbereich überlagert andere Bereiche;  
 } 
@@ -80,11 +80,11 @@ html, body {
 /*  ----------------------------------------- */
 
 p {
-font-family: Garamond, Verdana, Geneva, Lucida, Avantgarde, Arial; ! Festlegung der Schriftart;
-font-style:normal;                                                 ! Festlegung des Schrifttyps;
-font-size:11pt;                                                    ! Festlegung des Schriftgröße;
-font-weight:normal;                                                ! Festlegung der Fettschrift;
-color:#000000;                                                     ! Festlegung des Schriftfarbe;
+font-family: 'Montserrat', sans-serif;  ! Festlegung der Schriftart;
+font-style:normal;                      ! Festlegung des Schrifttyps;
+font-size:11pt;                         ! Festlegung des Schriftgröße;
+font-weight:400;                        ! Festlegung der Fettschrift (400 = normal, 700 = fett);
+color:#FFFFFF;                          ! Festlegung des Schriftfarbe, hier Schwarz;
 }
 .title {
 font-size:12pt;                                                    ! Festlegung des Schriftgröße;
