--- a/views/impressum.html
+++ b/views/impressum.html
@@ -24,8 +24,8 @@
 	<div id="navibereich"></div> <!-- Ende navibereich -->
 	<div id="textbereich">
               <div class="content-block">
-         <p class="title">Dies ist eine Überschrift</p> 
-         <p>Dies ist ein Beispieltext</p>
+	       <p class="title">Dies ist eine Überschrift</p> 
+	       <p>Dies ist ein Beispieltext</p>
               </div><!-- Ende content-block -->
 	</div> <!-- Ende textbereich -->	
  	<div id="fussbereich"></div> <!-- Ende fussbereich -->
@@ -36,6 +36,8 @@
        load_content('newsbereich', 'content-news.html');
        load_content('fussbereich', 'content-footer.html');
        load_content('kopfbereich', 'content-header.html');
+       load_content('impressum', 'content-impressum.html');
+
     });
   </script>
   </body>
