--- a/views/index.html
+++ b/views/index.html
@@ -24,8 +24,6 @@
 	<div id="navibereich"></div> <!-- Ende navibereich -->
 	<div id="textbereich">
               <div class="content-block">
-         <p class="title">Dies ist eine Überschrift</p> 
-         <p>Dies ist ein Beispieltext</p>
               </div><!-- Ende content-block -->
 	</div> <!-- Ende textbereich -->	
  	<div id="fussbereich"></div> <!-- Ende fussbereich -->
@@ -36,6 +34,7 @@
        load_content('newsbereich', 'content-news.html');
        load_content('fussbereich', 'content-footer.html');
        load_content('kopfbereich', 'content-header.html');
+       load_content('textbereich', 'content-block.html');
     });
   </script>
   </body>
