--- a/views/daten.html
+++ b/views/daten.html
@@ -3,7 +3,7 @@
   <head>
     <title>Website-Projekt</title>
     <meta name="AUTHOR" content="Jacek Tulacz">
-    <meta name="COPYRIGHT" content="Copyright (c) 2025 by Jacek Tulacz">
+    <meta name="COPYRIGHT" content="Copyright (c) 2026 by Jacek Tulacz">
     <meta name="ROBOTS" content="INDEX, FOLLOW">
     <meta name="DESCRIPTION" content="Dies ist die Bewerbungshomepage von Jacek Tulacz">
     <meta name ="KEYWORDS" content ="Bewerbungshomepage, Jacek Tulacz, Bewerbung">
@@ -19,7 +19,7 @@
 <!-- Einbindung der Javascript-Bibliothek JQUERY von GOOGLE -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </head>
-<body onload="setTimeout(function() {setActiveMenu('#main_menu_item_home');}, 1000);">
+<body onload="setTimeout(function() {setActiveMenu('#main_menu_item_daten');}, 1000);">
 <div id="kopfbereich"></div> <!-- Ende kopfbereich -->
 	<div id="navibereich"></div> <!-- Ende navibereich -->
 	<div id="textbereich">
